# ros2-groundingdino-realsense-ws3

./: .gitignore
install/: local_setup.sh  setup.sh
install/groundingdino_client/lib/groundingdino_client/: groundingdino_client_executable
install/groundingdino_client/share/groundingdino_client/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/groundingdino_interfaces/share/groundingdino_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/realsense2_camera/share/realsense2_camera/: package.sh
log/: latest_build
src/groundingdino_client/: package.xml  setup.cfg  setup.py
src/groundingdino_client/groundingdino_client/: groundingdino_client.py
src/groundingdino_client/launch/: dual_arm_workcell_bringup.launch.py  groundingdino_svccli.launch.py  left_camera_left_wrist_3_link_calibration.launch.py  right_camera_right_wrist_3_link_calibration.launch.py
src/groundingdino_interfaces/: CMakeLists.txt  package.xml
src/groundingdino_interfaces/msg/: ObjectPosition.msg  ObjectPositions.msg
src/groundingdino_interfaces/srv/: GroundingDinoPredict.srv
src/groundingdino_ros/: package.xml  setup.cfg  setup.py
src/groundingdino_ros/groundingdino_ros/: camera_to_dino.py
src/groundingdino_ros/launch/: groundingdino_pipeline.launch.py
src/groundingdino_server/: package.xml  setup.cfg  setup.py
src/groundingdino_server/config/: handeye_extrinsics.yaml
src/groundingdino_server/groundingdino_server/: groundingdino_server.py
src/groundingdino_server/launch/: groundingdino_svccli.launch.py
(+59 files in other folders)
